[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/counter_app_sprites/count_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/counter_app_sprites/count_button.png" type="Texture" id=2]
[ext_resource path="res://assets/counter_app_sprites/0.png" type="Texture" id=3]
[ext_resource path="res://assets/counter_app_face.png" type="Texture" id=4]
[ext_resource path="res://src/AppCounter.gd" type="Script" id=5]
[ext_resource path="res://sounds/poketch_button_big_beep.mp3" type="AudioStream" id=6]

[node name="AppCounter" type="Node2D"]
script = ExtResource( 5 )

[node name="CounterFace" type="Sprite" parent="."]
position = Vector2( 112, 96 )
texture = ExtResource( 4 )

[node name="Digit0" type="Sprite" parent="."]
position = Vector2( 134, 64 )
texture = ExtResource( 3 )

[node name="Digit1" type="Sprite" parent="."]
position = Vector2( 119, 64 )
texture = ExtResource( 3 )

[node name="Digit2" type="Sprite" parent="."]
position = Vector2( 104, 64 )
texture = ExtResource( 3 )

[node name="Digit3" type="Sprite" parent="."]
position = Vector2( 89, 64 )
texture = ExtResource( 3 )

[node name="Buttons" type="Node2D" parent="."]

[node name="CountButton" type="TextureButton" parent="Buttons"]
margin_left = 81.0
margin_top = 93.0
margin_right = 145.0
margin_bottom = 149.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="Buttons/CountButton" to="." method="_on_CountButton_pressed"]
